force-app/main/default/objects/Vendor__c/fields/Specialty_Type__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Type__c</fullName>
    <label>Specialty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Type</valueSetName>
    </valueSet>
</CustomField>