force-app/main/default/objects/Vendor__c/fields/Vendor_Contract__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contract__c</fullName>
    <label>Vendor_Contract</label>
    <type>Url</type>
</CustomField>